@@ -26,6 +26,7 @@
 * UtilityFunction no longer reports methods that call 'super' (fixed #39)
 * Duplication warnings now report the number of identical calls
 * UncommunicativeName warns about any name ending in a number (fixed #18)
+* FeatureEnvy no longer ignores :self when passed as a method parameter
 * Now reports an error for corrupt config files
 * Empty config files are ignored
 
